--- a/pages/newcastle.html
+++ b/pages/newcastle.html
@@ -5,12 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,300&display=swap"
-      rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,300&display=swap" rel="stylesheet"/>
     <link rel="stylesheet" type="text/css" href="../styles/newcastle.css" />
-    <link rel="icon" type="image/png" sizes="16x16"
-      href="../images/favicon_io/favicon-16x16.png"/>
+    <link rel="icon" type="image/png" sizes="16x16" href="../images/favicon_io/favicon-16x16.png"/>
     <script src="https://kit.fontawesome.com/450ef45e17.js" crossorigin="anonymous"></script>
     <title>TravelStorm:Newcastle</title>
   </head>
@@ -26,7 +23,7 @@
         <a href="../pages/newcastle.html" class="current-page">Newcastle</a>
         <a href="../pages/telaviv.html">Tel-Aviv</a>
       </nav>
-  </header>
+    </header>
     <main>
       <section>
         <picture>
