--- a/pages/telaviv.html
+++ b/pages/telaviv.html
@@ -1,89 +1,74 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,300&display=swap"
-        rel="stylesheet" />
-    <link rel="stylesheet" type="text/css" href="../styles/telaviv.css" />
-    <link rel="icon" type="image/png" sizes="16x16" href="../images/favicon_io/favicon-16x16.png" />
-    <script src="https://kit.fontawesome.com/450ef45e17.js" crossorigin="anonymous"></script>
-    <title>TravelStorm: Tel-Aviv</title>
-</head>
-
-<body>
-
-    <header>
-        <picture class="logo-container">
-            <a class="logo-anchor" href="index.html">TravelStorm</a>
-        </picture>
-        <nav class="anchor-container flex-center">
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,300&display=swap" rel="stylesheet" />
+        <link rel="stylesheet" type="text/css" href="../styles/telaviv.css" />
+        <link rel="icon" type="image/png" sizes="16x16" href="../images/favicon_io/favicon-16x16.png" />
+        <script src="https://kit.fontawesome.com/450ef45e17.js" crossorigin="anonymous"></script>
+        <title>TravelStorm:Tel-Aviv</title>
+    </head>
+    <body>
+        <header>
+            <picture class="logo-container">
+                <a class="logo-anchor" href="index.html">TravelStorm</a>
+            </picture>
+            <nav class="anchor-container flex-center">
             <a href="index.html" class="hover">Home</a>
             <a href="../pages/brussels.html" class="hover">Brussels</a>
             <a href="../pages/kathmandu.html" class="hover">Kathmandu</a>
             <a href="../pages/newcastle.html" class="hover">Newcastle</a>
             <a href="../pages/telaviv.html" class="current-page">Tel-Aviv</a>
-        </nav>
-    </header>
-    <main>
-        <section class="hero">
-            <div class="info">
-                <h1>Tel Aviv is the time of my life</h1>
-                <p class="secondary-text">Join us on a guided tour through the old city of jaffa,
-                    exploring the rich history of Israel and Tel-aviv.<br>
-                    Join us on a Culinary tour including some local treats!
-                </p>
-                <button>Book a tour now!</button>
-            </div>
-            <img src="../images/tel-aviv/telaviv-beachview.jpeg" alt="Beach View of Tel-Aviv">
-        </section>
-
-        <section class="cards">
-            <h2 class="title">What to do in Tel-Aviv</h2>
-            <legend class="holder">
-                <div class="card">
-                    <img class="card-header" src="../images/tel-aviv/Tel-Aviv-Experiences-Nightlife.jpg"
+            </nav>
+        </header>
+        <main>
+            <section class="hero">
+                <figure class="info">
+                    <h1>Tel Aviv is the time of my life</h1>
+                    <p class="secondary-text">Join us on a guided tour through the old city of jaffa,
+                        exploring the rich history of Israel and Tel-aviv.<br>
+                        Join us on a Culinary tour including some local treats!</p>
+                    <button>Book a tour now!</button>
+                </figure>
+                <picture>
+                    <img src="../images/tel-aviv/telaviv-beachview.jpeg" alt="Beach View of Tel-Aviv" class="main-image-top">
+                </picture>
+            </section>
+            <section class="cards">
+                <h2 class="title">What to do in Tel-Aviv</h2>
+                <legend class="holder">
+                    <figure class="card">
+                        <img class="card-header" src="../images/tel-aviv/Tel-Aviv-Experiences-Nightlife.jpg"
                         alt="Tel Aviv Nightlife">
-                    <p class="card-body">
+                        <p class="card-body">
                         Explore the everlasting nightlife and party scene
-                    </p>
-                </div>
-                <div class="card">
-                    <img class="card-header" src="../images/tel-aviv/Tel-Aviv-hotel.jpg" alt="Tel Aviv Hotels">
-                    <p class="card-body">
-                        Stay in luxuries hotels
-                    </p>
-                </div>
-                <div class="card">
-                    <img class="card-header" src="../images/tel-aviv/telaviv-beachview.jpeg" alt="Tel Aviv Beach view">
-                    <p class="card-body">
-                        Enjoy warm weather and beautiful beaches
-                    </p>
-                </div>
-                <div class="card">
-                    <img class="card-header" src="../images/tel-aviv/telaviv-jaffa.jpeg" alt="Old City of Jaffa">
-                    <p class="card-body">
-                        Explore the old city of jaffa and dine in delicious restaurant
-                    </p>
-                </div>
+                        </p>
+                    </figure>
+                    <figure class="card">
+                        <img class="card-header" src="../images/tel-aviv/Tel-Aviv-hotel.jpg" alt="Tel Aviv Hotels">
+                        <p class="card-body">Stay in luxuries hotels</p>
+                    </figure>
+                    <figure class="card">
+                        <img class="card-header" src="../images/tel-aviv/telaviv-beachview.jpeg" alt="Tel Aviv Beach view">
+                        <p class="card-body">Enjoy warm weather and beautiful beaches</p>
+                    </figure>
+                    <figure class="card">
+                        <img class="card-header" src="../images/tel-aviv/telaviv-jaffa.jpeg" alt="Old City of Jaffa">
+                        <p class="card-body">Explore the old city of jaffa and dine in delicious restaurant</p>
+                    </figure>
             </legend>
         </section>
-
         <section class="review">
-            <p>
-                "Great City to travel with friends! Highly recommended awesome nightlife and bars!"
-            </p>
+            <p>"Great City to travel with friends! Highly recommended awesome nightlife and bars!"</p>
             <span class="author">-Bob</span>
         </section>
         <section class="call-action">
             <legend>
-                <p>
-                    Book a tour now!<br>
-                    <span>Book a tour with our expert local guides now!</span>
+                <p>Book a tour now!<br>
+                <span>Book a tour with our expert local guides now!</span>
                 </p>
                 <button>
                     Book Now!
@@ -91,16 +76,15 @@
             </legend>
         </section>
     </main>
-    <footer class="flex-center flex-column">
-        <p>2024 &copy; All rights reserved to TravelStorm Inc.</p>
-        <nav class="flex-center">
-            <a href="#"><i class="icon hover fa-regular fa-envelope"></i></a>
-            <a href="#"><i class="icon hover fa-brands fa-facebook"></i></a>
-            <a href="#"><i class="icon hover fa-brands fa-instagram"></i></a>
-            <a href="#"><i class="icon hover fa-brands fa-twitter"></i></a>
-            <a href="#"><i class="icon hover fa-brands fa-linkedin"></i></a>
-        </nav>
-    </footer>
-</body>
-
+        <footer class="flex-center flex-column">
+            <p>2024 &copy; All rights reserved to TravelStorm Inc.</p>
+            <nav class="flex-center">
+                <a href="#"><i class="icon hover fa-regular fa-envelope"></i></a>
+                <a href="#"><i class="icon hover fa-brands fa-facebook"></i></a>
+                <a href="#"><i class="icon hover fa-brands fa-instagram"></i></a>
+                <a href="#"><i class="icon hover fa-brands fa-twitter"></i></a>
+                <a href="#"><i class="icon hover fa-brands fa-linkedin"></i></a>
+            </nav>
+        </footer>
+    </body>
 </html>
