footer changed and divs deleted,

--- a/pages/telaviv.html
+++ b/pages/telaviv.html
@@ -14,7 +14,7 @@
     <body>
         <header>
             <picture class="logo-container">
-                <a class="logo-anchor" href="index.html">TravelStorm</a>
+                <a class="logo-anchor" href="/index.html">TravelStorm</a>
             </picture>
             <nav class="anchor-container flex-center">
             <a href="index.html" class="hover">Home</a>
@@ -25,14 +25,7 @@
             </nav>
         </header>
         <main>
-            <section class="hero">
-                <figure class="info">
-                    <h1>Tel Aviv is the time of my life</h1>
-                    <p class="secondary-text">Join us on a guided tour through the old city of jaffa,
-                        exploring the rich history of Israel and Tel-aviv.<br>
-                        Join us on a Culinary tour including some local treats!</p>
-                    <button>Book a tour now!</button>
-                </figure>
+            <section class="main-image-top">
                 <picture>
                     <img src="../images/tel-aviv/telaviv-beachview.jpeg" alt="Beach View of Tel-Aviv" class="main-image-top">
                 </picture>
