--- a/pages/telaviv.html
+++ b/pages/telaviv.html
@@ -14,10 +14,10 @@
     <body>
         <header>
             <picture class="logo-container">
-                <a class="logo-anchor" href="/index.html">TravelStorm</a>
+                <a class="logo-anchor" href="../index.html">TravelStorm</a>
             </picture>
             <nav class="anchor-container flex-center">
-            <a href="index.html" class="hover">Home</a>
+            <a href="../index.html" class="hover">Home</a>
             <a href="../pages/brussels.html" class="hover">Brussels</a>
             <a href="../pages/kathmandu.html" class="hover">Kathmandu</a>
             <a href="../pages/newcastle.html" class="hover">Newcastle</a>
