fixed up hover effects and image size
removed some repeated css and changed the html a bit to fit the instructions

--- a/index.html
+++ b/index.html
@@ -45,27 +45,27 @@
         <section class="section-populars flex-center flex-column" id="populars">
           <h2>Our Most Popular Destinations!</h2>
           <div class="populars-container flex-center">
-            <figure class="flex-center flex-column hover">
+            <figure class="flex-center flex-column">
               <a href="./pages/brussels.html" class="logo-anchor">
-                <img src="./images/home-images/home-popular-1.jpg" alt="An image of Brussels">
+                <img src="./images/home-images/home-popular-1.jpg" alt="An image of Brussels" class="hover">
               </a>
               <p>Brussels</p>
             </figure>
-              <figure class="flex-center flex-column hover">
+              <figure class="flex-center flex-column">
                 <a href="./pages/kathmandu.html" class="logo-anchor">
-                  <img src="./images/home-images/home-popular-2.jpg" alt="An image of Kathmandu">
+                  <img src="./images/home-images/home-popular-2.jpg" alt="An image of Kathmandu" class="hover">
                 </a>
                 <p>Kathmandu</p>
               </figure>
-              <figure class="flex-center flex-column hover">
+              <figure class="flex-center flex-column">
                 <a href="./pages/newcastle.html" class="logo-anchor">
-                  <img src="./images/home-images/home-popular-3.jpeg" alt="An image of Newcastle">
+                  <img src="./images/home-images/home-popular-3.jpeg" alt="An image of Newcastle" class="hover">
                 </a>
                 <p>NewCastle</p>
               </figure>
-              <figure class="flex-center flex-column hover">
+              <figure class="flex-center flex-column">
                 <a href="./pages/telaviv.html" class="logo-anchor">
-                  <img src="./images/home-images/home-popular-4.jpg" alt="An image of Tel-Aviv">
+                  <img src="./images/home-images/home-popular-4.jpg" alt="An image of Tel-Aviv" class="hover">
                 </a>
                 <p>Tel-Aviv</p>
               </figure>
@@ -102,11 +102,21 @@
       <footer class="flex-center flex-column">
         <p>2024 &copy; All rights reserved to TravelStorm Inc.</p>
         <nav class="flex-center">
-          <a href="#"><i class="icon hover fa-regular fa-envelope"></i></a>
-          <a href="#"><i class="icon hover fa-brands fa-facebook"></i></a>
-          <a href="#"><i class="icon hover fa-brands fa-instagram"></i></a>
-          <a href="#"><i class="icon hover fa-brands fa-twitter"></i></a>
-          <a href="#"><i class="icon hover fa-brands fa-linkedin"></i></a>
+          <a href="#">
+            <i class="icon hover fa-regular fa-envelope"></i>
+          </a>
+          <a href="#">
+            <i class="icon hover fa-brands fa-facebook"></i>
+          </a>
+          <a href="#">
+            <i class="icon hover fa-brands fa-instagram"></i>
+          </a>
+          <a href="#">
+            <i class="icon hover fa-brands fa-twitter"></i>
+          </a>
+          <a href="#">
+            <i class="icon hover fa-brands fa-linkedin"></i>
+          </a>
         </nav>
       </footer>
   </body>
