--- a/pages/telaviv.html
+++ b/pages/telaviv.html
@@ -25,31 +25,29 @@
             </nav>
         </header>
         <main>
-            <section class="main-image-top">
-                <picture>
-                    <img src="../images/tel-aviv/telaviv-beachview.jpeg" alt="Beach View of Tel-Aviv" class="main-image-top">
-                </picture>
-            </section>
+            <picture>
+                <img src="../images/tel-aviv/telaviv-beachview.jpeg" alt="Beach View of Tel-Aviv" class="main-image-top">
+            </picture>
             <section class="cards">
                 <h2 class="title">What to do in Tel-Aviv</h2>
                 <legend class="holder">
                     <figure class="card">
-                        <img class="card-header" src="../images/tel-aviv/Tel-Aviv-Experiences-Nightlife.jpg"
+                        <img class="card-header hover" src="../images/tel-aviv/Tel-Aviv-Experiences-Nightlife.jpg"
                         alt="Tel Aviv Nightlife">
                         <p class="card-body">
                         Explore the everlasting nightlife and party scene
                         </p>
                     </figure>
                     <figure class="card">
-                        <img class="card-header" src="../images/tel-aviv/Tel-Aviv-hotel.jpg" alt="Tel Aviv Hotels">
+                        <img class="card-header hover" src="../images/tel-aviv/Tel-Aviv-hotel.jpg" alt="Tel Aviv Hotels">
                         <p class="card-body">Stay in luxuries hotels</p>
                     </figure>
                     <figure class="card">
-                        <img class="card-header" src="../images/tel-aviv/telaviv-beachview.jpeg" alt="Tel Aviv Beach view">
+                        <img class="card-header hover" src="../images/tel-aviv/telaviv-beachview.jpeg" alt="Tel Aviv Beach view">
                         <p class="card-body">Enjoy warm weather and beautiful beaches</p>
                     </figure>
                     <figure class="card">
-                        <img class="card-header" src="../images/tel-aviv/telaviv-jaffa.jpeg" alt="Old City of Jaffa">
+                        <img class="card-header hover" src="../images/tel-aviv/telaviv-jaffa.jpeg" alt="Old City of Jaffa">
                         <p class="card-body">Explore the old city of jaffa and dine in delicious restaurant</p>
                     </figure>
             </legend>
@@ -63,7 +61,7 @@
                 <p>Book a tour now!<br>
                 <span>Book a tour with our expert local guides now!</span>
                 </p>
-                <button>
+                <button class="hover">
                     Book Now!
                 </button>
             </legend>
@@ -72,11 +70,21 @@
         <footer class="flex-center flex-column">
             <p>2024 &copy; All rights reserved to TravelStorm Inc.</p>
             <nav class="flex-center">
-                <a href="#"><i class="icon hover fa-regular fa-envelope"></i></a>
-                <a href="#"><i class="icon hover fa-brands fa-facebook"></i></a>
-                <a href="#"><i class="icon hover fa-brands fa-instagram"></i></a>
-                <a href="#"><i class="icon hover fa-brands fa-twitter"></i></a>
-                <a href="#"><i class="icon hover fa-brands fa-linkedin"></i></a>
+              <a href="#">
+                <i class="icon hover fa-regular fa-envelope"></i>
+              </a>
+              <a href="#">
+                <i class="icon hover fa-brands fa-facebook"></i>
+              </a>
+              <a href="#">
+                <i class="icon hover fa-brands fa-instagram"></i>
+              </a>
+              <a href="#">
+                <i class="icon hover fa-brands fa-twitter"></i>
+              </a>
+              <a href="#">
+                <i class="icon hover fa-brands fa-linkedin"></i>
+              </a>
             </nav>
         </footer>
     </body>
